--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rubio's Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+   <nav class="navbar">
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Projects</a>
+   </nav>
     
 </body>
 </html>
