--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+    <header class="header">
    <nav class="navbar">
     <a href="#">Home</a>
     <a href="#">About</a>
     <a href="#">Projects</a>
    </nav>
-</header>
+    </header>
     
 </body>
 </html>
