--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Projects</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,12 +11,11 @@
 </head>
 <body>
     <header class="header">
-   <nav class="navbar">
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Projects</a>
-   </nav>
-    </header>
-    
+        <nav class="navbar">
+         <a href="index.html">Home</a>
+         <a href="#">About</a>
+         <a href="projects.html">Projects</a>
+        </nav>
+         </header>
 </body>
 </html>
