finally figured it out
header was hiding my text >: (
but we got it there!

--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
 <body>
     <header class="header">
    <nav class="navbar">
-    <a href="#">Home</a>
+    <a href="./index.html">Home</a>
     <a href="#">About</a>
-    <a href="#">Projects</a>
+    <a href="./projects.html">Projects</a>
    </nav>
-    </header>
+    </header> 
+<br>
+<br>
+<br>
+<br>
+<br>
+    <p>This is sample text</p>
     
 </body>
 </html>
