--- a/projects.html
+++ b/projects.html
@@ -12,10 +12,17 @@
 <body>
     <header class="header">
         <nav class="navbar">
-         <a href="index.html">Home</a>
+         <a href="./index.html">Home</a>
          <a href="#">About</a>
-         <a href="projects.html">Projects</a>
+         <a href="./projects.html">Projects</a>
         </nav>
-         </header>
+     </header>  
+<br>
+<br>
+<br>
+<br>
+<br>
+  <p>Woooo!</p>
+    
 </body>
 </html>
