--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>About</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,18 +11,18 @@
 </head>
 <body>
     <header class="header">
-   <nav class="navbar">
-    <a href="./index.html">Home</a>
-    <a href="./about.html">About</a>
-    <a href="./projects.html">Projects</a>
-   </nav>
-    </header> 
+        <nav class="navbar">
+         <a href="./index.html">Home</a>
+         <a href="./about.html">About</a>
+         <a href="./projects.html">Projects</a>
+        </nav>
+     </header>  
 <br>
 <br>
 <br>
 <br>
 <br>
-    <p>This is sample text</p>
+  <p>This is a about page, yes?</p>
     
 </body>
 </html>
