--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
     <header class="header">
         <nav class="navbar">
          <a href="./index.html">Home</a>
-         <a href="#">About</a>
+         <a href="./about.html">About</a>
          <a href="./projects.html">Projects</a>
         </nav>
      </header>  
