--- a/about.html
+++ b/about.html
@@ -23,6 +23,14 @@
 <br>
 <br>
   <p>This is a about page, yes?</p>
+  <br>
+  <br>
+  <section class="story">
+    <p>Jargon Jargon Jargon</p>
+  </section>
+  <section class="headshot">
+    <p>Where the image will go</p>
+  </section>
     
 </body>
 </html>
