--- a/about.html
+++ b/about.html
@@ -16,21 +16,16 @@
          <a href="./about.html">About</a>
          <a href="./projects.html">Projects</a>
         </nav>
-     </header>  
+     </header> 
 <br>
 <br>
 <br>
 <br>
 <br>
-  <p>This is a about page, yes?</p>
-  <br>
-  <br>
-  <section class="story">
-    <p>Jargon Jargon Jargon</p>
-  </section>
-  <section class="headshot">
-    <p>Where the image will go</p>
-  </section>
-    
+<br>
+ <div class="wrapper">
+    <article class="headshot"><p>This is my picture?</p></article>
+    <article class="story"><p>This is my story, it goes here</p></article>
+ </div> 
 </body>
 </html>
