about page nearly complete

--- a/about.html
+++ b/about.html
@@ -22,10 +22,10 @@
 <br>
 <br>
 <br>
-<h1>Can I have one here?</h1>
+<h1>Saludos, I am Adan Rubio.</h1>
 <br>
  <div class="wrapper">
-    <article class="headshot"><p>This is my picture?</p></article>
+    <article class="headshot"><img src="/images/fullbody_05-2024.JPG" alt="Full body Picture of Adan Rubio"></article>
     <article class="story"><p>This is my story, it goes here</p></article>
  </div> 
 </body>
