portfolio nearly complete

--- a/projects.html
+++ b/projects.html
@@ -22,8 +22,20 @@
 <br>
 <br>
 <br>
-  <p>Woooo!</p>
-  
+  <h1>Portfolio of Selected Works</h1>
+  <br>
+  <div class="container">
+    <img src="/images/abuelita2.1.jpg" alt="Abuelita Mock Ad December 2023" width="549px" height="274px">
+    <img src="/images/BelchAD_11-8-23.jpg" alt="Mock Ad November 2023" width="299px" height="391px">
+    <img src="/images/Crunch2.0.jpg" alt="Crunch Ad April 2023" width="528px" height="391px">
+  </div>
+  <br>
+  <h2>Have text here!</h2>
+  <br>
+  <div class="container2">
+    <img src="/images/Rubio_TonyLamaad_Page_2.jpg" alt="Page 1 of Tony Lama Ad Spread" width="566px" height="733px">
+    <img src="/images/Rubio_TonyLamaad_Page_3.jpg" alt="Page 2 of Tony Lama Ad Spread" width="566px" height="733px">
+  </div>
     
 </body>
 </html>
