update to about page

--- a/about.html
+++ b/about.html
@@ -26,7 +26,9 @@
 <br>
  <div class="wrapper">
     <article class="headshot"><img src="/images/fullbody_05-2024.JPG" alt="Full body Picture of Adan Rubio"></article>
-    <article class="story"><p>This is my story, it goes here</p></article>
+    <article class="story"><p>Prior to moving to San Antonio, Texas, Adan lived in a small town in New Mexico. Very little diverse educational and career opportunities were present or even offered. 
+    He moved to San Antonio in the hopes of being given the chance to participate in this ever-growing city of opportunity. Where he's no longer bound to minimal career choices and has the option to choose an entire plethora of careers. 
+    Adan Rubio currently studyies at Northwest Vista College, with the intent to graduate with an Applied Associate of Science in Digital Media.</p></article>
  </div> 
 </body>
 </html>
