About text done (for now)

--- a/about.html
+++ b/about.html
@@ -28,7 +28,10 @@
     <article class="headshot"><img src="/images/fullbody_05-2024.JPG" alt="Full body Picture of Adan Rubio"></article>
     <article class="story"><p>Prior to moving to San Antonio, Texas, Adan lived in a small town in New Mexico. Very little diverse educational and career opportunities were present or even offered. 
     He moved to San Antonio in the hopes of being given the chance to participate in this ever-growing city of opportunity. Where he's no longer bound to minimal career choices and has the option to choose an entire plethora of careers. 
-    Adan Rubio currently studyies at Northwest Vista College, with the intent to graduate with an Applied Associate of Science in Digital Media.</p></article>
+    Adan Rubio currently studyies at Northwest Vista College, with the intent to graduate with an Applied Associate of Science in Digital Media.<br><br>
+    Attention to detail, progressive goal planning, & ADA compliance are three of many practices that continue to have a great impact in Adan's academic & personal projects.
+    Diverse projects ranging but not limited to advertisements, magazine spreads, flyers, and promotional artwork. His programming experience includes HTML, CSS, and JavaScript, allowing him to wireframe and develop websites effectively.
+    This whole site you see now is a part of that invaluable experience. An experience Adan is eager to share with every employer, client, and fellow designer.</p></article>
  </div> 
 </body>
 </html>
