--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
     <img src="/images/Crunch2.0.jpg" alt="Crunch Ad April 2023" width="528px" height="391px">
   </div>
   <br>
-  <h2>Have text here!</h2>
+  <p>From left to right (above): </p>
   <br>
   <div class="container2">
     <img src="/images/Rubio_TonyLamaad_Page_2.jpg" alt="Page 1 of Tony Lama Ad Spread" width="566px" height="733px">
