portfolio images added with complete text

--- a/projects.html
+++ b/projects.html
@@ -41,13 +41,19 @@
   </div>
   <br>
   <p>Above: Digital magazine advertisement spread. The spread was created with the interactivity concept of clicking the hat to view a pop up video. 
-    Along with a functioning QR code that takes you directly to the login hyperlink for Tony Lama Boots.</p>
+    Along with a functioning QR code that takes you directly to the login hyperlink for Tony Lama Boots. 10-2023</p>
   <br>
   <br>
-  <div>
-    <img src="" alt="">
-    <img src="" alt="">
+  <br>
+  <div class="container2">
+    <img src="/images/Rubio_IAG2.0.png" alt="" width="432px" height="648px">
+    <img src="/images/official_IAM.JPG" alt="" width="515px" height="667px">
   </div>
-    
+  <br>
+  <p>Above: Left image is the original insignia created for the Northwest Vista College Indigenous Awareness Group. This insignia has elements modeled after the sacred medicine wheel.
+    Right image is the design displayed on the official promotional flyer for the event.<br><br>
+    This project was closely supervised by the Indigenous Awareness Group comittee and was directly designed from their vision. The image of a turtle and the symbols emulating petroglyphs were a part of the design direction and process.
+    This same insignia design was transferred onto a linoleum block for printmaking during the on-campus event.
+  </p>
 </body>
 </html>
