badges position (for now)

--- a/about.html
+++ b/about.html
@@ -32,6 +32,10 @@
     Attention to detail, progressive goal planning, & ADA compliance are three of many practices that continue to have a great impact in Adan's academic & personal projects.
     Diverse projects ranging but not limited to advertisements, magazine spreads, flyers, and promotional artwork. His programming experience includes HTML, CSS, and JavaScript, allowing him to wireframe and develop websites effectively.
     This whole site you see now is a part of that invaluable experience. An experience Adan is eager to share with every employer, client, and fellow designer.</p></article>
- </div> 
+ </div>
+ <div class="wrapper">
+ <a href="https://academy.yoast.com/certificate/4484/1808992/cd143cf036e680eb357211419ea33af8/1/" target="_blank"><img src="https://academy.yoast.com/badge/4484/1808992/cd143cf036e680eb357211419ea33af8/1/" width="200" alt=" successfully completed the Yoast SEO for WordPress course!"/></a>
+<img src="/images/Badgr_Badge_11-26-2024.PNG" alt="" width="165px">
+</div>
 </body>
 </html>
