footer added to page

--- a/projects.html
+++ b/projects.html
@@ -55,5 +55,7 @@
     This project was closely supervised by the Indigenous Awareness Group comittee and was directly designed from their vision. The image of a turtle and the symbols emulating petroglyphs were a part of the design direction and process.
     This same insignia design was transferred onto a linoleum block for printmaking during the on-campus event.
   </p>
+  <br>
+  <footer>&copy; 2025 Adan Rubio</footer>
 </body>
 </html>
