--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 <div class="banner">
 
 </div>
-
-    
+<br>
+<div class="container3">
+<p id="clock"></p>
+</div>
+<script src="/apps.js"></script>
 </body>
 </html>
