--- a/index.html
+++ b/index.html
@@ -23,12 +23,21 @@
 <br>
 <br>
 <div class="banner">
-
+<img src="/images/Banner_01-09-25.jpg" alt="Adan_Rubio_Name_Banner">
 </div>
 <br>
 <div class="container3">
 <p id="clock"></p>
 </div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<footer>&copy; 2025 Adan Rubio</footer>
 <script src="/apps.js"></script>
 </body>
 </html>
