--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <br>
 <br>
 <div class="banner">
-<img src="/images/Banner_01-09-25.jpg" alt="Adan_Rubio_Name_Banner">
+<img src="images/Banner_01-09-25.jpg" alt="Adan_Rubio_Name_Banner">
 </div>
 <br>
 <div class="container3">
