--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
 <br>
 <br>
 <footer>&copy; 2025 Adan Rubio</footer>
-<script src="/apps.js"></script>
+<script src="apps.js"></script>
 </body>
 </html>
