updating img srcs

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 <h1>Saludos, I am Adan Rubio.</h1>
 <br>
  <div class="container">
-    <article class="headshot"><img src="/images/fullbody_05-2024.JPG" alt="Full body Picture of Adan Rubio"></article>
+    <article class="headshot"><img src="images/fullbody_05-2024.JPG" alt="Full body Picture of Adan Rubio"></article>
     <article class="story"><p>Prior to moving to San Antonio, Texas, Adan lived in a small town in New Mexico. Very little diverse educational and career opportunities were present or even offered. 
     He moved to San Antonio in the hopes of being given the chance to participate in this ever-growing city of opportunity. Where he's no longer bound to minimal career choices and has the option to choose an entire plethora of careers. 
     Adan Rubio currently studyies at Northwest Vista College, with the intent to graduate with an Applied Associate of Science in Digital Media.<br><br>
@@ -35,7 +35,7 @@
  </div>
  <div class="wrapper">
  <a href="https://academy.yoast.com/certificate/4484/1808992/cd143cf036e680eb357211419ea33af8/1/" target="_blank"><img src="https://academy.yoast.com/badge/4484/1808992/cd143cf036e680eb357211419ea33af8/1/" width="200" alt=" successfully completed the Yoast SEO for WordPress course!"/></a>
-<img src="/images/Badgr_Badge_11-26-2024.PNG" alt="" width="165px">
+<img src="images/Badgr_Badge_11-26-2024.PNG" alt="Creative_Problem_Solving_Badge" width="165px">
 </div>
 </body>
 </html>
