--- a/projects.html
+++ b/projects.html
@@ -25,9 +25,9 @@
   <h1>Portfolio of Selected Works</h1>
   <br>
   <div class="container">
-    <img src="/images/abuelita2.1.jpg" alt="Abuelita Mock Ad December 2023" width="549px" height="274px">
-    <img src="/images/BelchAD_11-8-23.jpg" alt="Mock Ad December 2023" width="299px" height="391px">
-    <img src="/images/Crunch2.0.jpg" alt="Crunch Ad April 2023" width="528px" height="391px">
+    <img src="images/abuelita2.1.jpg" alt="Abuelita Mock Ad December 2023" width="549px" height="274px">
+    <img src="images/BelchAD_11-8-23.jpg" alt="Mock Ad December 2023" width="299px" height="391px">
+    <img src="images/Crunch2.0.jpg" alt="Crunch Ad April 2023" width="528px" height="391px">
   </div>
   <br>
   <p>From left to right (above): Nestle Abuelita Mock-up 12-2023, Color Theory Exercise Logo 12-2023, Nestle Crunch Mock-up 04-2023</p>
@@ -36,8 +36,8 @@
   <br>
   <br>
   <div class="container2">
-    <img src="/images/Rubio_TonyLamaad_Page_2.jpg" alt="Page 1 of Tony Lama Ad Spread" width="566px" height="733px">
-    <img src="/images/Rubio_TonyLamaad_Page_3.jpg" alt="Page 2 of Tony Lama Ad Spread" width="566px" height="733px">
+    <img src="images/Rubio_TonyLamaad_Page_2.jpg" alt="Page 1 of Tony Lama Ad Spread" width="566px" height="733px">
+    <img src="images/Rubio_TonyLamaad_Page_3.jpg" alt="Page 2 of Tony Lama Ad Spread" width="566px" height="733px">
   </div>
   <br>
   <p>Above: Digital magazine advertisement spread. The spread was created with the interactivity concept of clicking the hat to view a pop up video. 
@@ -46,8 +46,8 @@
   <br>
   <br>
   <div class="container2">
-    <img src="/images/Rubio_IAG2.0.png" alt="" width="432px" height="648px">
-    <img src="/images/official_IAM.JPG" alt="" width="515px" height="667px">
+    <img src="images/Rubio_IAG2.0.png" alt="" width="432px" height="648px">
+    <img src="images/official_IAM.JPG" alt="" width="515px" height="667px">
   </div>
   <br>
   <p>Above: Left image is the original insignia created for the Northwest Vista College Indigenous Awareness Group. This insignia has elements modeled after the sacred medicine wheel.
